Test dropdown header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,15 +24,23 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
+                    <div class="dropdown">
+                        <button class="dropbtn">Test
+                          <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <li>
+                                <a class="page-scroll" href="#about">About</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="#team">Team</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="#contact">Contact</a>
+                            </li>
+                        </div>
+                      </div>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -44,8 +52,8 @@
     <header>
         <div class="container">
             <div class="intro-text">                
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
+                <div class="intro-heading">WikiWorld</div>
+                <div class="intro-lead-in">The world created by Wiki users</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
