--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
+    {% include introduction.html %}
     {% include services.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
