--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -7,10 +7,16 @@
         <h2 class="section-heading text-uppercase mb-3 tb-3">Introduction</h2>
 
         <div class="section-subheading text-justify lead">
-          The political scene of the United States of America is a jungle of diverse, opposing and often controversial
-          claims and opinions. One especially sensitive topic is climate change. A lot is said on this, but how much and
-          by who? We hope to follow the breadcrumb trail of data to find the true bellwethers that lead the
-          ostentatious public opinion of the US.
+          With more than 6 million English articles, Wikipedia can be seen as the world's largest and most-read 
+          reference work in history. The platform proposes a quick and easy way to navigate between this mass of 
+          information through the usage of hyperlinks connecting different articles. How users of Wikipedia use 
+          these links give a real insight into the cultural connections that exist between diverse concepts. 
+          The Wikispeedia dataset provides even more information in that direction, by providing link paths made 
+          by players attempting to join two different concepts. These connection paths between articles thus 
+          exhibiting connections in the player’s imagination of these concepts. This connectivity graph allows us 
+          to construct a representation of Wikispeedia users reality, described through the centrality of 
+          countries, peoples and historical events. Our project aims at observing this vision of the world, 
+          and questioning the existing differences with our real world.
           <br><br>
           <h5 class="section-heading mt-3 mb-3 tb-3">So why should we care?</h5>
           <div>
