--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     {% include services.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
-    {% include team.html %}
+    {% include team_test.html %}
     {% include clients.html %}
     {% include contact.html %}
     {% include footer.html %}
