test font introduction

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -7,6 +7,7 @@
         <h2 class="section-heading text-uppercase mb-3 tb-3">Introduction</h2>
 
         <div class="section-subheading text-justify lead">
+          
           With more than 6 million English articles, Wikipedia can be seen as the world's largest and most-read 
           reference work in history. The platform proposes a quick and easy way to navigate between this mass of 
           information through the usage of hyperlinks connecting different articles. How users of Wikipedia use 
@@ -17,13 +18,15 @@
           to construct a representation of Wikispeedia users reality, described through the centrality of 
           countries, peoples and historical events. Our project aims at observing this vision of the world, 
           and questioning the existing differences with our real world.
+       
           <br><br>
           <h5 class="section-heading mt-3 mb-3 tb-3">So why should we care?</h5>
           <div>
+            <p class="text-muted">
             The short yet illustrious history of the United States of America has left its mark not only on the human
             world, but the natural one as well. Leveraging the data from CAIT v2.0 we see the true historic impact on
             the climate of the world from the actions of this country. <br><br>
-
+            </p>
             <footer class="blockquote-footer">
               Source: <a href="https://www.cgdev.org/media/who-caused-climate-change-historically">CO2 emissions
                 excluding LUCF, 1850-2011 (CAIT v2.0)</a> </footer>
