--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -22,11 +22,11 @@
           <br><br>
           <h5 class="section-heading mt-3 mb-3 tb-3">So why should we care?</h5>
           <div>
-            <h3>
+            <div class="text-justify">
             The short yet illustrious history of the United States of America has left its mark not only on the human
             world, but the natural one as well. Leveraging the data from CAIT v2.0 we see the true historic impact on
             the climate of the world from the actions of this country. <br><br>
-            </h3>
+            </div>
             <footer class="blockquote-footer">
               Source: <a href="https://www.cgdev.org/media/who-caused-climate-change-historically">CO2 emissions
                 excluding LUCF, 1850-2011 (CAIT v2.0)</a> </footer>
