size font intro

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -7,7 +7,7 @@
         <h2 class="section-heading text-uppercase mb-3 tb-3">Introduction</h2>
 
         <div class="section-subheading text-justify lead">
-          <p class="text-lg-left">
+          <p class="text-xl-left">
           With more than 6 million English articles, Wikipedia can be seen as the world's largest and most-read 
           reference work in history. The platform proposes a quick and easy way to navigate between this mass of 
           information through the usage of hyperlinks connecting different articles. How users of Wikipedia use 
@@ -22,7 +22,7 @@
           <br><br>
           <h5 class="section-heading mt-3 mb-3 tb-3">So why should we care?</h5>
           <div>
-            <p class="text-md-left">
+            <p class="text-lg-left">
             The short yet illustrious history of the United States of America has left its mark not only on the human
             world, but the natural one as well. Leveraging the data from CAIT v2.0 we see the true historic impact on
             the climate of the world from the actions of this country. <br><br>
