test font intro

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -7,7 +7,7 @@
         <h2 class="section-heading text-uppercase mb-3 tb-3">Introduction</h2>
 
         <div class="section-subheading text-justify lead">
-          <p class="text-xl-left">
+          <p class="text-uppercase">
           With more than 6 million English articles, Wikipedia can be seen as the world's largest and most-read 
           reference work in history. The platform proposes a quick and easy way to navigate between this mass of 
           information through the usage of hyperlinks connecting different articles. How users of Wikipedia use 
