Modif portfolio people

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,10 @@
                         <a class="page-scroll" href="#services">Introduction</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Countries</a>
+                        <a class="page-scroll" href="#about">Countries</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">People</a>
+                        <a class="page-scroll" href="#portfolio">People</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Discussion</a>
