Modif tell me more button

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
             <div class="intro-text">                
                 <div class="intro-heading">WikiWorld</div>
                 <div class="intro-lead-in">The world created by Wiki users</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#introduction" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
