Test services section

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -8,6 +8,11 @@
                 </div>
             </div>
             <div class="row text-center">
+                With more than 6 million English articles, Wikipedia can be seen as the world's largest and most-read 
+                reference work in history. The platform proposes a quick and easy way to navigate between this mass of 
+                information through the usage of hyperlinks connecting different articles. How users of Wikipedia use 
+                these links give a real insight into the cultural connections that exist between diverse concepts. 
+                The Wikispeedia dataset 
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
