--- a/_includes/services.html
+++ b/_includes/services.html
@@ -7,7 +7,7 @@
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row text-justify">
                 With more than 6 million English articles, Wikipedia can be seen as the world's largest and most-read 
                 reference work in history. The platform proposes a quick and easy way to navigate between this mass of 
                 information through the usage of hyperlinks connecting different articles. How users of Wikipedia use 
