--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,19 +19,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Introduction</a>
+                        <a class="page-scroll" href="#introduction">Introduction</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Countries</a>
+                        <a class="page-scroll" href="#countries">Countries</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">People</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Discussion</a>
+                        <a class="page-scroll" href="#discussion">Discussion</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Conclusion</a>
+                        <a class="page-scroll" href="#conclusion">Conclusion</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#team">Team</a>
                     </li>
                 </ul>
             </div>
