--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,11 @@
 
     {% include header.html %}
     {% include introduction.html %}
-    {% include services.html %}
+    {% include countries.html %}
     {% include portfolio_grid.html %}
-    {% include about.html %}
+    {% include discussion.html %}
+    {% include conclusion.html %}
     {% include team.html %}
-    {% include clients.html %}
-    {% include contact.html %}
-    {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
 
