--- a/_includes/discussion.html
+++ b/_includes/discussion.html
@@ -1,5 +1,5 @@
 <!-- Discussion Section -->
-    <section id="discussion">
+    <section id="discussion" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
