--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 
     {% include header.html %}
     {% include introduction.html %}
+    {% include services.html %}
     {% include countries.html %}
     {% include portfolio_grid.html %}
     {% include discussion.html %}
