test plot interactif intro

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -19,6 +19,9 @@
           countries, peoples and historical events. Our project aims at observing this vision of the world, 
           and questioning the existing differences with our real world.
           <br><br>
+          <div>
+            {% include CC_age_gender.html %}
+          </div>
           <h5 class="section-heading mt-3 mb-3 tb-3">So why should we care?</h5>
           <div>
             <p class="text-lg-left">
@@ -30,6 +33,7 @@
               Source: <a href="https://www.cgdev.org/media/who-caused-climate-change-historically">CO2 emissions
                 excluding LUCF, 1850-2011 (CAIT v2.0)</a> </footer>
             <br>
+
 
             With almost a quarter of all emissions, the US represents a major player. It is because of this that public
             opinion on this problem is of international importance. In order to shed more light on the delicate topic,
