test text justified

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -6,7 +6,7 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase mb-3 tb-3">Introduction</h2>
 
-        <div class="section-subheading text-justify lead">
+        <div class="text-justify lead">
 
           I am sure you have already heard of Wikipedia, right ? Every high-school student has already used it 
           in order to cook up the best presentation for his History class !  With more than 6 million English 
@@ -17,6 +17,7 @@
           to the one of the Americas, but not only ! Indeed, these hyperlinks can give a real insight into the 
           cultural connections that exist between diverse concepts, such as historical figures and geographical 
           locations. A game, Wikispeedia provides even more information in that direction !
+
           <br><br>
           
           <h4 class="section-heading mt-3 mb-3 tb-3">Wikispeedia who?</h4>
