--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -6,7 +6,7 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase mb-3 tb-3">Introduction</h2>
 
-        <div class="text-justify lead">
+        <div class="text-justify">
 
           I am sure you have already heard of Wikipedia, right ? Every high-school student has already used it 
           in order to cook up the best presentation for his History class !  With more than 6 million English 
