Test text size intro

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -8,7 +8,7 @@
 
         <div class="text-justify">
 
-          I am sure you have already heard of Wikipedia, right ? Every high-school student has already used it 
+          <p>I am sure you have already heard of Wikipedia, right ? Every high-school student has already used it 
           in order to cook up the best presentation for his History class !  With more than 6 million English 
           articles, Wikipedia can be seen as the world's largest and most-read reference work in history. It is 
           easy to get lost in this mass of information. However, the platform proposes a quick and easy way to 
@@ -16,7 +16,7 @@
           different articles. These blue links are super useful to go from Christopher Columbus’ Wikipedia page, 
           to the one of the Americas, but not only ! Indeed, these hyperlinks can give a real insight into the 
           cultural connections that exist between diverse concepts, such as historical figures and geographical 
-          locations. A game, Wikispeedia provides even more information in that direction !
+          locations. A game, Wikispeedia provides even more information in that direction !</p>
 
           <br><br>
           
