--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     {% include discussion.html %}
     {% include conclusion.html %}
     {% include team.html %}
+    {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
 
