--- a/_includes/countries.html
+++ b/_includes/countries.html
@@ -8,7 +8,16 @@
                 </div>
             </div>
             <div class="row text-justify">
-                Blablabla
+                Blablabla<br>
+                Test 1 sans fond
+                <div class="col-md-12 residuals">
+                    <img src="img/countries/pays_en_rond.png" alt="" srcset="">
+                </div>
+
+                Test 2 fond blanc <br>
+                <div class="col-md-12 residuals">
+                    <img src="img/countries/pays_en_rond_fond_blanc.png" alt="" srcset="">
+                </div>
 
             </div>
         </div>
