Center plot rond

--- a/_includes/countries.html
+++ b/_includes/countries.html
@@ -11,12 +11,12 @@
                 Blablabla<br>
                 Test 1 sans fond
                 <div class="col-md-12 residuals">
-                    <img src="img/countries/pays_en_rond.png" alt="" srcset="">
+                    <img src="img/countries/pays_en_rond.png" class="img-responsive img-centered" alt="">
                 </div>
 
                 Test 2 fond blanc <br>
                 <div class="col-md-12 residuals">
-                    <img src="img/countries/pays_en_rond_fond_blanc.png" alt="" srcset="">
+                    <img src="img/countries/pays_en_rond_fond_blanc.png" class="img-responsive img-centered" alt="">
                 </div>
 
             </div>
