Test image centered

--- a/_includes/countries.html
+++ b/_includes/countries.html
@@ -10,15 +10,20 @@
             <div class="row text-justify">
                 Blablabla<br>
                 Test 1 sans fond
-                <div class="col-md-12 residuals">
-                    <img src="img/countries/pays_en_rond.png" class="img-responsive img-centered" alt="">
-                </div>
-
-                Test 2 fond blanc <br>
-                <div class="col-md-12 residuals">
-                    <img src="img/countries/pays_en_rond_fond_blanc.png" class="img-responsive img-centered" alt="">
-                </div>
-
             </div>
+
+            <div class="col-md-12 residuals">
+                <img src="img/countries/pays_en_rond.png" class="img-responsive img-centered" alt="">
+            </div>
+
+            <div class="row text-justify">
+            Test 2 fond blanc <br>
+            </div>
+            
+            <div class="col-md-12 residuals">
+                <img src="img/countries/pays_en_rond_fond_blanc.png" class="img-responsive img-centered" alt="">
+            </div>
+
+            
         </div>
     </section>
