--- a/_includes/countries.html
+++ b/_includes/countries.html
@@ -13,17 +13,11 @@
             </div>
 
             <div class="col-md-12 residuals">
-                <img src="img/countries/pays_en_rond.png" class="img-responsive img-centered" alt="">
+                <img src="img/countries/pays_en_rond.png" width="580" 
+                height="600" class="img-responsive img-centered" alt="">
             </div>
 
-            <div class="row text-justify">
-            Test 2 fond blanc <br>
-            </div>
             
-            <div class="col-md-12 residuals">
-                <img src="img/countries/pays_en_rond_fond_blanc.png" class="img-responsive img-centered" alt="">
-            </div>
-
             
         </div>
     </section>
