--- a/_includes/countries.html
+++ b/_includes/countries.html
@@ -7,6 +7,20 @@
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
+
+            <div class="row text-justify">
+                Blablabla <br>
+            </div>
+
+            <div>
+                {% include map.html %}
+              </div>
+
+            <div class="col-md-12 residuals">
+                <img src="img/countries/continents_centrality.png" width="580" 
+                height="600" class="img-responsive img-centered" alt="">
+            </div>
+
             <div class="row text-justify">
                 Blablabla<br>
                 Test 1 sans fond
@@ -17,7 +31,7 @@
                 height="600" class="img-responsive img-centered" alt="">
             </div>
 
-            
+
             
         </div>
     </section>
