--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     {% include introduction.html %}
     {% include services.html %}
     {% include countries.html %}
+    {% include countries_portfolio.html %}
     {% include portfolio_grid.html %}
     {% include discussion.html %}
     {% include conclusion.html %}
