--- a/_includes/modals_countries.html
+++ b/_includes/modals_countries.html
@@ -1,5 +1,5 @@
 <!-- Countries Portfolio Modals -->
-{% for post in site.posts %}
+{% for post in site.posts2 %}
    <div class="portfolio-modal modal fade" id="portfolioModalCountries{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
        <div class="modal-content">
            <div class="close-modal" data-dismiss="modal">
