--- a/_includes/countries_portfolio.html
+++ b/_includes/countries_portfolio.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div class="row">
-            {% for post in site.posts2 %}
+            {% for post in site.posts %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModalCountries{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -16,7 +16,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/countries_words/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>{{ post.title }}</h4>
