--- a/_includes/modals_countries.html
+++ b/_includes/modals_countries.html
@@ -1,5 +1,5 @@
 <!-- Countries Portfolio Modals -->
-{% for post in site.posts %}
+{% for post in site.portfolio_post.countries_words.posts %}
    <div class="portfolio-modal modal fade" id="portfolioModalCountries{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
        <div class="modal-content">
            <div class="close-modal" data-dismiss="modal">
@@ -14,7 +14,7 @@
                        <div class="modal-body">
                            <h2>{{ post.title }}</h2>
                            <hr class="star-primary">
-                           <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                           <img src="img/countries_words/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                            <p>{{ post.description }}</p>
                            <!--
                            <ul class="list-inline item-details">
