--- a/_includes/countries_portfolio.html
+++ b/_includes/countries_portfolio.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div class="row">
-            {% for post in site.portfolio_post.countries_words.posts %}
+            {% for post in site.categories.portfolio_post.countries_words.posts %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModalCountries{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
