--- a/_includes/countries_portfolio.html
+++ b/_includes/countries_portfolio.html
@@ -8,9 +8,9 @@
                 </div>
             </div>
             <div class="row">
-            {% for post in site.categories.portfolio_post.countries_words %}
+            {% for post in site.categories.countries_words %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModalCountries{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
