--- a/_includes/modals_countries.html
+++ b/_includes/modals_countries.html
@@ -1,6 +1,6 @@
 <!-- Countries Portfolio Modals -->
 {% for post in site.categories.countries %}
-   <div class="portfolio-modal modal fade" id="portfolioModalCountries{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
+   <div class="portfolio-modal modal fade" id="portfolio2Modal{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
        <div class="modal-content">
            <div class="close-modal" data-dismiss="modal">
                <div class="lr">
