--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,5 +1,5 @@
  <!-- People Portfolio Modals -->
- {% for post in site.categories.people %}
+ {% for post in site.categories.countries %}
     <div class="portfolio-modal modal fade" id="portfolioModal{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
