--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,6 +1,6 @@
  <!-- People Portfolio Modals -->
  {% for post in site.categories.people %}
-    <div class="portfolio-modal modal fade" id="Test{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
