--- a/_includes/countries_portfolio.html
+++ b/_includes/countries_portfolio.html
@@ -1,9 +1,9 @@
 <!-- Countries Portfolio Grid Section -->
-<section id="countries_portfolio">
+<section id="portfolio">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Zoom in</h2>
+                <h2 class="section-heading">Zoom in countries</h2>
                 <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
         </div>
