--- a/_includes/countries_portfolio.html
+++ b/_includes/countries_portfolio.html
@@ -1,5 +1,5 @@
 <!-- Countries Portfolio Grid Section -->
-<section id="portfolio">
+<section id="portfolio_countries">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
