Test fix bugg scroll and ountries

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
                         <a class="page-scroll" href="#countries">Countries</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">People</a>
+                        <a class="page-scroll" href="#people">People</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#discussion">Discussion</a>
