change plot continent centrality

--- a/_includes/countries.html
+++ b/_includes/countries.html
@@ -16,9 +16,12 @@
                 {% include map.html %}
               </div>
 
-            <div class="col-md-12 residuals">
-                <img src="img/countries/continents_centrality.png" width="341" 
-                height="307" class="img-responsive img-centered" alt="">
+            <div class="row text-justify">
+                Blablabla <br>
+            </div>
+
+            <div>
+                {% include continents_centrality.htlm}
             </div>
 
             <div class="row text-justify">
