Plot continent + remove sections services and discussion

--- a/_includes/countries.html
+++ b/_includes/countries.html
@@ -21,7 +21,7 @@
             </div>
 
             <div>
-                {% include continents_centrality.htlm}
+                {% include continents_centrality.htlm %}
             </div>
 
             <div class="row text-justify">
