--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
     <header>
         <div class="container">
             <div class="intro-text">                
-                <div class="intro-heading">WikiWorld</div>
+                <div class="intro-heading">Welcome to the WikiWorld!</div>
                 <div class="intro-lead-in">The world created by Wiki users</div>
                 <a href="#introduction" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
