Add plot carre countries and continent

--- a/_includes/countries.html
+++ b/_includes/countries.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Countries</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">What countries will constitute the world shaped by Wiki users?</h3>
                 </div>
             </div>
 
@@ -29,11 +29,22 @@
             </div>
 
             <br><br>
-
             <div class="row text-justify">
                 Blablabla<br>
                 Test 1 sans fond
             </div>
+            <br><br>
+
+            <div>
+                {% include plot_carres_countries_continent_centralities.html %}
+            </div>
+
+            <br><br>
+            <div class="row text-justify">
+                Blablabla<br>
+                Test 1 sans fond
+            </div>
+            <br><br>
 
             <div class="col-md-12 residuals">
                 <img src="img/countries/pays_en_rond.png" width="560" 
