--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,5 +1,5 @@
 <!-- Introduction -->
-<section class="page-section" id="introduction">
+<section id="introduction" class="bg-light-gray">
   <div class="container">
 
     <div class="row">
