--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -1,5 +1,5 @@
 <!-- Conclusion Section -->
-    <section id="conclusion">
+    <section id="conclusion" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
