--- a/_includes/countries.html
+++ b/_includes/countries.html
@@ -1,5 +1,5 @@
 <!-- Countries Section -->
-    <section id="countries" class="bg-light-gray">
+    <section id="countries" >
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
